[package]
name = "hi-apns"
version = "0.0.3"
edition = "2021"
description = "Apple apns"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
serde = {version = "1.0.144", features = ["serde_derive"]}
serde_json = "1.0.85"
serde_repr = "0.1.9"

failure = "0.1.8"
uuid = { version = "1.1", features = ["serde", "v4"] }

reqwest = {version = "0.11", features = ["json","native-tls-vendored"]}

